Lower the overlay z-index to avoid overflow

--- a/styles/rainbow-delimiters.less
+++ b/styles/rainbow-delimiters.less
@@ -14,6 +14,10 @@
   text-decoration: underline;
 }
 
+.rainbow-marker {
+  z-index: 0 !important;
+}
+
 .generate-rainbows(@n, @i: 1) when (@i =< @n) {
   .rainbow-@{i} {
     @spins: floor(360 / @max);
